--- a/Samples/AccountingDSL/AccountingDSL/AccountingDSL.csproj
+++ b/Samples/AccountingDSL/AccountingDSL/AccountingDSL.csproj
@@ -10,8 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LanguageExt.Parsec" Version="2.2.29-beta" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.7.0" />
+    <PackageReference Include="LanguageExt.Parsec" Version="4.4.9" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
   </ItemGroup>
 
 </Project>
