--- a/LanguageExt.Parsec/LanguageExt.Parsec.csproj
+++ b/LanguageExt.Parsec/LanguageExt.Parsec.csproj
@@ -8,7 +8,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <PackageVersion>5.0.0-beta-37</PackageVersion>
         <PackageId>LanguageExt.Parsec</PackageId>
         <Title>LanguageExt.Parsec</Title>
@@ -29,8 +29,8 @@
         <LangVersion>default</LangVersion>
     </PropertyGroup>
     <ItemGroup>
-        <None Include="README.nuget.md" Pack="true" PackagePath="\"/>
-        <None Include="..\Images\lang-ext-small.png" Pack="true" PackagePath="\"/>
+        <None Include="README.nuget.md" Pack="true" PackagePath="\" />
+        <None Include="..\Images\lang-ext-small.png" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -43,7 +43,7 @@
         <None Remove="obj\**" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="System.ValueTuple" Version="[4.5.0,)" />
+        <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\LanguageExt.Core\LanguageExt.Core.csproj" />
