--- a/LanguageExt.Rx/LanguageExt.Rx.csproj
+++ b/LanguageExt.Rx/LanguageExt.Rx.csproj
@@ -8,7 +8,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <PackageVersion>5.0.0-beta-37</PackageVersion>
         <PackageId>LanguageExt.Rx</PackageId>
         <Title>LanguageExt.Rx</Title>
@@ -29,8 +29,8 @@
         <LangVersion>default</LangVersion>
     </PropertyGroup>
     <ItemGroup>
-        <None Include="README.nuget.md" Pack="true" PackagePath="\"/>
-        <None Include="..\Images\lang-ext-small.png" Pack="true" PackagePath="\"/>
+        <None Include="README.nuget.md" Pack="true" PackagePath="\" />
+        <None Include="..\Images\lang-ext-small.png" Pack="true" PackagePath="\" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="**\*.cs" />
@@ -61,8 +61,8 @@
         <None Remove="ValidationSeq.Extensions.cs" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="System.ValueTuple" Version="[4.5.0,)" />
-        <PackageReference Include="System.Reactive" Version="5.0.0" />
+        <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+        <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\LanguageExt.Core\LanguageExt.Core.csproj" />
