--- a/LanguageExt.Benchmarks/LanguageExt.Benchmarks.csproj
+++ b/LanguageExt.Benchmarks/LanguageExt.Benchmarks.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
     <PackageReference Include="Sasa.Collections" Version="1.0.0-RC4" />
     <PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
+    <PackageReference Include="System.Reactive" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
